Created product color models & updated order

--- a/Areas/admin/Views/Product/Create.cshtml
+++ b/Areas/admin/Views/Product/Create.cshtml
@@ -1,74 +1,93 @@
 ﻿@model Product
 @{
-    ViewData["Title"] = "Create";
-    SelectList selectListItems = new SelectList(ViewBag.Brands, nameof(Brand.ID), nameof(Brand.Image));
-    SelectList selectListItems2 = new SelectList(ViewBag.Categories, nameof(Category.ID), nameof(Category.Image));
+ViewData["Title"] = "Create";
+SelectList selectListItems = new SelectList(ViewBag.Brands, nameof(Brand.ID), nameof(Brand.Image));
+SelectList selectListItems2 = new SelectList(ViewBag.Categories, nameof(Category.ID), nameof(Category.Image));
 }
-
 <h1>Create</h1>
-
-
 <div class="form-input">
-  <form method="POST" enctype="multipart/form-data">
-    <div class="form-group">
-        <label asp-for="Name">Name</label>
-        <input asp-for="Name" placeholder="Name...">
-        <span class="text-danger" asp-validation-for="Name"></span>
-    </div>
-     <div class="form-group">
-        <label asp-for="Price">Price</label>
-        <input asp-for="Price" placeholder="Price...">
-        <span class="text-danger" asp-validation-for="Price"></span>
-    </div>
-     <div class="form-group">
-        <label asp-for="DiscountedPrice">Discounted Price</label>
-        <input asp-for="DiscountedPrice" placeholder="Discounted Price...">
-        <span class="text-danger" asp-validation-for="DiscountedPrice"></span>
-    </div>
+   <form method="POST" enctype="multipart/form-data">
       <div class="form-group">
-        <label asp-for="Count">Count</label>
-        <input asp-for="Count" placeholder="Count...">
-        <span class="text-danger" asp-validation-for="Count"></span>
-    </div>
-     <div class="form-group">
-        <label asp-for="Count">Count</label>
-        <input asp-for="Count" placeholder="Count...">
-        <span class="text-danger" asp-validation-for="Count"></span>
-    </div>
-     <div class="form-group">
-        <label asp-for="MainFile">Main Image</label>
-        <input asp-for="MainFile" placeholder="Main Image...">
-        <span class="text-danger" asp-validation-for="MainFile"></span>
-    </div>
-        <div class="form-group">
-        <label asp-for="Files">Main Image</label>
-        <input asp-for="Files" multiple placeholder="Main Image...">
-        <span class="text-danger" asp-validation-for="Files"></span>
-    </div>
-        <div class="form-group">
-        <label asp-for="BrandID">Brand ID</label>
-        <select asp-for="BrandID" class="form-select" asp-items=@selectListItems aria-label="Default select example">
-        </select>
-        <option value="">Select Main Category</option>
-        <span class="text-danger" asp-validation-for="BrandID"></span>
+         <label asp-for="Name">Name</label>
+         <input asp-for="Name" placeholder="Name...">
+         <span class="text-danger" asp-validation-for="Name"></span>
+      </div>
+      <div class="form-group">
+         <label asp-for="Price">Price</label>
+         <input asp-for="Price" placeholder="Price...">
+         <span class="text-danger" asp-validation-for="Price"></span>
+      </div>
+      <div class="form-group">
+         <label asp-for="DiscountedPrice">Discounted Price</label>
+         <input asp-for="DiscountedPrice" placeholder="Discounted Price...">
+         <span class="text-danger" asp-validation-for="DiscountedPrice"></span>
+      </div>
+     @* <div class="form-group">
+         <label asp-for="Count">Count</label>
+         <input asp-for="Count" placeholder="Count...">
+         <span class="text-danger" asp-validation-for="Count"></span>
+      </div>*@
+      <div class="form-group">
+         <label asp-for="MainFile">Main Image</label>
+         <input asp-for="MainFile" placeholder="Main Image...">
+         <span class="text-danger" asp-validation-for="MainFile"></span>
+      </div>
+      <div class="form-group">
+         <label asp-for="Files">Main Image</label>
+         <input asp-for="Files" multiple placeholder="Main Image...">
+         <span class="text-danger" asp-validation-for="Files"></span>
+      </div>
+      <div class="form-group">
+         <label asp-for="BrandID">Brand ID</label>
+         <select asp-for="BrandID" class="form-select" asp-items=@selectListItems aria-label="Default select example">
+         </select>
+         <option value="">Select Main Category</option>
+         <span class="text-danger" asp-validation-for="BrandID"></span>
+      </div>
+      <div class="form-group">
+         <label asp-for="CategoryID">Brand ID</label>
+         <select asp-for="CategoryID" class="form-select" asp-items=@selectListItems2 aria-label="Default select example">
+         </select>
+         <option value="">Select Main Category</option>
+         <span class="text-danger" asp-validation-for="CategoryID"></span>
+      </div>
+        <div class="row justify-content-center">
+         <div class="select-main row col-lg-12">
+                <div class="form-group col-lg-4">
+                <label asp-for="ColorIDs">Colors</label>
+                <select name="ColorIDs" class="form-select"  asp-items="new SelectList(ViewBag.Colors,nameof(Color.ID),nameof(Color.Name))" aria-label="Default select example">
+                </select>
+             </div>
+             <div class="form-group col-lg-4">
+                <label asp-for="SizeIDs">Colors</label>
+                <select name="SizeIDs" class="form-select"  asp-items="new SelectList(ViewBag.Sizes,nameof(Size.ID),nameof(Size.Name))" aria-label="Default select example">
+                </select>
+             </div>
+             <div class="form-group col-lg-4">
+                <label>Count</label>
+                <input name="Counts" placeholder="Count...">
+                <span class="text-danger" asp-validation-for="Count"></span>
+            </div>
+          </div>
+          <a asp-area="admin" asp-controller="product" asp-action="ColorSizeItem" class="btn btn-primary addInput">Add</a>
         </div>
-         <div class="form-group">
-        <label asp-for="CategoryID">Brand ID</label>
-        <select asp-for="CategoryID" class="form-select" asp-items=@selectListItems2 aria-label="Default select example">
-        </select>
-        <option value="">Select Main Category</option>
-        <span class="text-danger" asp-validation-for="CategoryID"></span>
-        </div>
-       <div class="form-check">
-      <input class="form-check-input" asp-for="IsBestSeller" id="flexCheckDefault">
-      <label class="form-check-label" asp-for="IsBestSeller">
-        IsBestSeller
-      </label>
-      <span class="text-danger" asp-validation-for="IsBestSeller"></span>
-
-   </div>
-
-
-    <button type="submit" value="Submit">Create</button>
-  </form>
+      <div class="form-check">
+         <input class="form-check-input" asp-for="IsBestSeller" id="flexCheckDefault">
+         <label class="form-check-label" asp-for="IsBestSeller">
+            IsBestSeller
+         </label>
+         <span class="text-danger" asp-validation-for="IsBestSeller"></span>
+      </div>
+      <button type="submit" value="Submit">Create</button>
+   </form>
 </div>
+
+  @section Script{
+      <partial name"_ValidationPartial" >
+                     <script>
+                            $(document).on('click', '.addInput', function (e) {
+                                e.preventDefault();
+
+                            })
+                     </script>           
+  }           
