Added SMTP Configuration

--- a/Areas/admin/Views/Order/Update.cshtml
+++ b/Areas/admin/Views/Order/Update.cshtml
@@ -9,7 +9,8 @@ int counter = 0;
          <div class="card-body">
             <h5 class="card-title">@Model.Name @Model.Surname</h5>
             <p class="card-text">@Model.OrderStatus</p>
-            <p class="card-text">@Model.TotalPrice</p>
+            <p class="card-text">@Model.Countries</p>
+            <p class="card-text">$@Model.TotalPrice</p>
             <p class="card-text">@Model.AddressFirst</p>
             <p class="card-text">@Model.AddressSecond</p>
             <p class="card-text">@Model.CompanyName</p>
