--- a/Views/Shared/_OrderFormPartial.cshtml
+++ b/Views/Shared/_OrderFormPartial.cshtml
@@ -26,18 +26,8 @@
                                     <input asp-for="CompanyName" class="form-control form-control-md">
                                 </div>
                                 <div class="form-group">
-                                    @*<label>Country / Region *</label>
-                                    <div class="select-box">
-                                        <select name="country" class="form-control form-control-md">
-                                            <option value="default" selected="selected">United States
-                                                (US)
-                                            </option>
-                                            <option value="uk">United Kingdom (UK)</option>
-                                            <option value="us">United States</option>
-                                            <option value="fr">France</option>
-                                            <option value="aus">Australia</option>
-                                        </select>
-                                    </div>*@
+                                    <label>State *</label>
+                                     <input asp-for="State" class="form-control form-control-md" required>
                                 </div>
                                 <div class="form-group">
                                     <label>Street address *</label>
@@ -59,17 +49,12 @@
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label>State *</label>
-                                            @*<div class="select-box">
-                                                <select name="country" class="form-control form-control-md">
-                                                    <option value="default" selected="selected">California</option>
-                                                    <option value="uk">United Kingdom (UK)</option>
-                                                    <option value="us">United States</option>
-                                                    <option value="fr">France</option>
-                                                    <option value="aus">Australia</option>
+                                            <label>Country / Region *</label>
+                                            <div class="select-box">
+                                                <select name="CountryIDs" class="form-control form-control-md" asp-items="new SelectList(ViewBag.Countries,nameof(Countries.ID),nameof(Countries.Name))">
                                                 </select>
-                                            </div>*@
-                                            <input asp-for="State" class="form-control form-control-md" required>
+                                            </div>
+                           
                                         </div>
                                         <div class="form-group">
                                             <label>Phone *</label>
