Updated account controller

--- a/Views/Account/ConfirmEmail.cshtml
+++ b/Views/Account/ConfirmEmail.cshtml
@@ -1,11 +1,11 @@
-﻿@*@model EmailConfirmModel*@
+﻿@model EmailConfirmModel
 @{
     ViewData["Title"] = "Confirm email";
 }
 <div class="container">
-    <div class="row text-center">
+    <div style="padding: 40px 0" class="row text-center justify-content-center">
         <div class="col-md-4">
-            @if (ViewBag.IsSuccess == true)
+            @if (Model.EmailVerified == true)
             {
                 <div class="alert alert-success" role="alert">
                     <p>Your email has been verified successfully</p>
@@ -13,7 +13,24 @@
             }
             else
             {
-                <p>Something went wrong or your token has been expired.</p>
+                if (Model.EmailSent)
+                {
+                    <p>Email sent on your registered email id.</p>
+                }
+                else
+                {
+                    <p>We have sent an email on your email id. Click on the link to login.</p>
+                }
+
+                <form asp-action="ConfirmEmail">
+                    <div asp-validation-summary="ModelOnly" class="text text-danger"></div>
+                    <input type="hidden" asp-for="Email" />
+
+                    <p>Did not get any email of deleted by mistake?</p>
+                    <div class="form-group">
+                        <input type="submit" value="Resend confirmation email" class="btn btn-primary" />
+                    </div>
+                </form>
             }
         </div>
     </div>
