--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -48,7 +48,7 @@
                                     <div class="form-checkbox d-flex align-items-center justify-content-between">
                                         <input type="checkbox" class="custom-checkbox" id="remember1" name="remember1" required="">
                                         <label for="remember1">Remember me</label>
-                                        <a asp-controller="account" asp-action="lostpassword">Lost your password?</a>
+                                        <a asp-controller="account" asp-action="forgotpassword">Lost your password?</a>
                                     </div>
                                     <a href="#" class="btn btn-primary">Sign In</a>
                                 </div>
