Updated account controller & repository

--- a/Views/Account/ForgotPassword.cshtml
+++ b/Views/Account/ForgotPassword.cshtml
@@ -13,14 +13,17 @@
             @if (Model?.EmailSent == true)
             {
                 <div
-                    style="padding-bottom: 23px;padding-top: 45px;"
+                    style="padding-bottom: 7px;
+                    padding-top: 23px;
+                    margin-top: 38px;
+                    margin-bottom: 13px;"
                     class="alert alert-success" role="alert">
                     <p>If you are reghistered with us , <br />
                     We have sent an email on your registered email </p>
                 </div>
             }
             else{
-                 <form asp-action="ForgotPassword" class="woocommerce-ResetPassword lost_reset_password">
+                 <form style="margin-top: 26px" asp-action="ForgotPassword" class="woocommerce-ResetPassword lost_reset_password">
                     <div asp-validation-summary="ModelOnly" class="text text-danger"></div>
                   <p>Lost your password? Please enter your username or email address. You will receive a link to create a new password via email.</p>
                   <p class="woocommerce-form-row woocommerce-form-row--first form-row form-row-first">
