--- a/Views/Account/ResetPassword.cshtml
+++ b/Views/Account/ResetPassword.cshtml
@@ -21,6 +21,7 @@
             {
                 <form asp-action="ResetPassword">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Email" class="form-control" />
                     <input type="hidden" asp-for="UserId" class="form-control" />
                     <input type="hidden" asp-for="Token" class="form-control" />
                     <div class="form-group">
