--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -59,9 +59,9 @@
                             <div class="tab-pane active in" id="account-dashboard">
                                 <p class="greeting">
                                     Hello
-                                    <span class="text-dark font-weight-bold">John Doe</span>
+                                    <span class="text-dark font-weight-bold">@Model.ProfileVM.Name</span>
                                     (not
-                                    <span class="text-dark font-weight-bold">John Doe</span>?
+                                    <span class="text-dark font-weight-bold">@Model.ProfileVM.Name</span>?
                                     <a asp-controller="account" asp-action="logout" class="text-primary">Log out</a>)
                                 </p>
 
