--- a/Views/Shared/_OrderFormPartial.cshtml
+++ b/Views/Shared/_OrderFormPartial.cshtml
@@ -51,8 +51,10 @@
                                         <div class="form-group">
                                             <label>Country / Region *</label>
                                             <div class="select-box">
-                                                <select name="CountryIDs" class="form-control form-control-md" asp-items="new SelectList(ViewBag.Countries,nameof(Countries.ID),nameof(Countries.Name))">
-                                                </select>
+                                              @*  <select asp-for="CountryID" class="form-control form-control-md" asp-items="new SelectList(ViewBag.Countries,nameof(Countries.ID),nameof(Countries.Name))">
+                                                </select>*@
+                                            <select id="lstCountryId" asp-for="CountryID" class ="form-control" asp-items="ViewBag.CountryID"
+                                            onchange="FillCities(this,'lstCity');" ></select>
                                             </div>
                            
                                         </div>
@@ -72,4 +74,4 @@
                                         rows="4"
                                         placeholder="Notes about your order, e.g special notes for delivery"></textarea>
                                 </div>
-                            </div>
+                            </div>                            
