--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,11 +1,17 @@
 ﻿@using Wolmart.Ecommerce.Interfaces;
 @model HomeVM
 @inject ILayoutService layoutService
-
+@inject UserManager<AppUser> userManager
 
 @{
-     List<CartVM> cartVMs = await layoutService.GetCart();
-     Layout = null;
+    List<CartVM> cartVMs = await layoutService.GetCart();
+    Layout = null;
+    @using Microsoft.AspNetCore.Identity
+   AppUser appUser = null;
+    if (User.Identity.IsAuthenticated)
+    {
+        appUser = userManager.Users.FirstOrDefault(a => a.UserName == User.Identity.Name);
+    }
  }
 
 
@@ -105,8 +111,8 @@
                         <a asp-controller="account" asp-action="profile" class="d-lg-show">My Account</a>
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <a asp-controller="account" asp-action="login" class="d-lg-show"><i
-                                class="w-icon-account"></i>@User.Identity.Name</a>
+                                <a asp-controller="account" asp-action="profile" class="d-lg-show"><i
+                                class="w-icon-account"></i>@appUser.FirstName</a>
                             <span class="delimiter d-lg-show">/</span/>
                             <a asp-controller="account" asp-action="logout" class="ml-0 d-lg-show">Sign Out</a>
 
