--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -39,9 +39,6 @@
                                 <a href="#account-orders" class="nav-link">Orders</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#account-downloads" class="nav-link">Downloads</a>
-                            </li>
-                            <li class="nav-item">
                                 <a href="#account-addresses" class="nav-link">Addresses</a>
                             </li>
                             <li class="nav-item">
@@ -225,85 +222,8 @@
                                 <p>The following addresses will be used on the checkout page
                                     by default.</p>
                                 <div class="row">
-                                    <div class="col-sm-6 mb-6">
-                                        <div class="ecommerce-address billing-address pr-lg-8">
-                                            <h4 class="title title-underline ls-25 font-weight-bold">Billing Address</h4>
-                                            <address class="mb-4">
-                                                <table class="address-table">
-                                                    <tbody>
-                                                        <tr>
-                                                            <th>Name:</th>
-                                                            <td>John Doe</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>Company:</th>
-                                                            <td>Conia</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>Address:</th>
-                                                            <td>Wall Street</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>City:</th>
-                                                            <td>California</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>Country:</th>
-                                                            <td>United States (US)</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>Postcode:</th>
-                                                            <td>92020</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>Phone:</th>
-                                                            <td>1112223334</td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-                                            </address>
-                                            <a href="#"
-                                                class="btn btn-link btn-underline btn-icon-right text-primary">Edit
-                                                your billing address<i class="w-icon-long-arrow-right"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6 mb-6">
-                                        <div class="ecommerce-address shipping-address pr-lg-8">
-                                            <h4 class="title title-underline ls-25 font-weight-bold">Shipping Address</h4>
-                                            <address class="mb-4">
-                                                <table class="address-table">
-                                                    <tbody>
-                                                        <tr>
-                                                            <th>Name:</th>
-                                                            <td>John Doe</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>Company:</th>
-                                                            <td>Conia</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>Address:</th>
-                                                            <td>Wall Street</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>City:</th>
-                                                            <td>California</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>Country:</th>
-                                                            <td>United States (US)</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th>Postcode:</th>
-                                                            <td>92020</td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-                                            </address>
-                                            <a href="#"
-                                                class="btn btn-link btn-underline btn-icon-right text-primary">Edit your
-                                                shipping address<i class="w-icon-long-arrow-right"></i></a>
-                                        </div>
+                                    <div class="col-sm-12 mb-6">
+                                        @await Html.PartialAsync("_AccountAddressPartial",Model.AddressVM)
                                     </div>
                                 </div>
                             </div>
